[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/common/interactiveArea/interactiveArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="InteractiveArea" type="Area2D"]
script = ExtResource( 1 )
size = Vector2( 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
